Fix: image alignment not working in some themes fixes #4825

--- a/assets/dev/scss/frontend/widgets/image.scss
+++ b/assets/dev/scss/frontend/widgets/image.scss
@@ -13,6 +13,7 @@
 
 		img {
 			vertical-align: middle;
+			display: inline-block;
 		}
 
 		&.elementor-image-shape- {
